<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Favorite -->
    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/menu_fav"
        app:showAsAction="always" />

    <!-- setaswallpaper -->
    <item
        android:id="@+id/menu_set_as_wallpaper"
        android:title="@string/menu_set_as_wallpaper"
        android:visible="false"
        app:showAsAction="never" />

    <!-- Share -->
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        android:visible="true"
        app:showAsAction="always" />

    <!-- Save -->
    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:visible="false"
        app:showAsAction="never" />

</menu>
