<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout1"
    >



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:elevation="6dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ProgressBar
        android:id="@+id/progressBar_wallpaper_by_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        />
        <android.support.v4.view.ViewPager
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relativeLayout1" />

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner_slide_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            fab:menu_animationDelayPerItem="0"

            fab:menu_colorNormal="@color/colorFabNormal"
            fab:menu_colorPressed="@color/colorFabPressed"
            fab:menu_colorRipple="@color/colorFabRipple"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_maxLines="2"
            fab:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_set_as_wallpaper"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                fab:fab_label="@string/menu_set_as_wallpaper"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_share"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                fab:fab_label="@string/menu_share"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_save"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_save"
                fab:fab_label="@string/menu_save"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>



</RelativeLayout>